--- a/src/index.css
+++ b/src/index.css
@@ -72,3 +72,29 @@ code {
   font-size: 16px;
   cursor: pointer;
 }
+.state{
+  
+  color: white;
+  border-radius: 5px;
+  font-size: medium;
+  margin-top: 20px;
+  justify-content: center;
+  align-items: center;
+  margin-right:10px;
+  margin-left: 250px;
+}
+
+
+.facilities{
+
+  color: white;
+  border-radius: 5px;
+  font-size: medium;
+  margin-top: 20px;
+  justify-content: center;
+  align-items: center;
+  margin-right:50px;
+  margin-left: 100px;
+
+
+}
